Modularize the app