@@ -12,6 +12,7 @@
 
   <properties>
     <javafx.version>15</javafx.version>
+    <jna.version>5.6.0</jna.version>
     <kotlin.version>1.4.10</kotlin.version>
 
     <mainClass>mvp.AppKt</mainClass>
@@ -30,12 +31,18 @@
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
-      <version>5.6.0</version>
+      <version>${jna.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>${kotlin.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
@@ -50,30 +57,23 @@
   </dependencies>
 
   <build>
-    <sourceDirectory>src/main/kotlin</sourceDirectory>
-
     <plugins>
       <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.3.0</version>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
         <executions>
           <execution>
-            <phase>package</phase>
+            <id>default-compile</id>
+            <phase>none</phase>
+          </execution>
+          <execution>
+            <id>java-compile</id>
+            <phase>compile</phase>
             <goals>
-              <goal>single</goal>
+              <goal>compile</goal>
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <archive>
-            <manifest>
-              <mainClass>${mainClass}</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
@@ -81,6 +81,7 @@
         <version>${kotlin.version}</version>
         <executions>
           <execution>
+            <phase>process-sources</phase>
             <goals>
               <goal>compile</goal>
             </goals>
@@ -88,14 +89,76 @@
         </executions>
         <configuration>
           <jvmTarget>${maven.compiler.release}</jvmTarget>
+          <sourceDirs>
+            <sourceDirectory>src/main/kotlin</sourceDirectory>
+          </sourceDirs>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.moditect</groupId>
+        <artifactId>moditect-maven-plugin</artifactId>
+        <version>1.0.0.RC1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>add-module-info</goal>
+            </goals>
+            <configuration>
+              <overwriteExistingFiles>true</overwriteExistingFiles>
+              <outputDirectory>${project.build.directory}/modules</outputDirectory>
+              <modules>
+                <!-- JNA 5.7 will introduce JPMS support -->
+                <module>
+                  <artifact>
+                    <groupId>net.java.dev.jna</groupId>
+                    <artifactId>jna</artifactId>
+                    <version>${jna.version}</version>
+                  </artifact>
+                  <moduleInfoSource>
+                    module com.sun.jna {
+                      exports com.sun.jna;
+                      exports com.sun.jna.ptr;
+                      exports com.sun.jna.win32;
+
+                      requires java.desktop;
+                      requires java.logging;
+
+                      opens com.sun.jna.darwin;
+                    }
+                  </moduleInfoSource>
+                </module>
+              </modules>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jlink</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
+          <compress>2</compress>
+          <jmodsPath>${project.build.directory}/modules</jmodsPath>
+          <launcher>mvp</launcher>
           <mainClass>${mainClass}</mainClass>
+          <noHeaderFiles>true</noHeaderFiles>
+          <noManPages>true</noManPages>
+          <stripDebug>true</stripDebug>
+          <options>
+            <option>--add-opens</option>
+            <option>java.base/java.lang.reflect=com.jfoenix</option>
+            <option>--add-opens</option>
+            <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
